<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiConverter</string>
    <string name="action_settings">Settings</string>
    
    <string name="top">top</string>
    <string name="from">from</string>
    
	<string name="km">km</string>
	<string name="cm">cm</string>
	<string name="mm">mm</string>
	<string name="m">m</string>
	<string name="yard">yard</string>
	<string name="inch">inch</string>
	<string name="feet">feet</string>
	
	<string name="celsius">celsius</string>
	<string name="kelvin">kelvin</string>
	<string name="fahrenheit">fahrenheit</string>
	
	<string name="kilogram">kilogram</string>
	<string name="pound">pound</string>
	<string name="gram">gram</string>
	<string name="milligram">milligram</string>
	<string name="ounce">ounce</string>
	<string name="grain">grain</string>
	<string name="stone">stone</string>
	
	<string name="swap">swap image</string>
	
	<string name="length">length</string>
	<string name="temperature">temperature</string>
	<string name="mass">mass</string>

</resources>
