<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Tabla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="3" >

    <TableRow
        android:id="@+id/RowData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/data1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>
        
        <ImageView
            android:id="@+id/swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/swap"
            android:src="@drawable/swap" />

        <EditText
            android:id="@+id/data2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/RowName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from" />
    </TableRow>

    <TableRow
        android:id="@+id/RowRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/length1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/km" />

            <RadioButton
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m" />

            <RadioButton
                android:id="@+id/yard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yard" />

            <RadioButton
                android:id="@+id/feet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feet" />

            <RadioButton
                android:id="@+id/inch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inch" />

            <RadioButton
                android:id="@+id/cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm" />

            <RadioButton
                android:id="@+id/mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mm" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <RadioGroup
            android:id="@+id/length2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/km" />

            <RadioButton
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m" />

            <RadioButton
                android:id="@+id/yard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yard" />

            <RadioButton
                android:id="@+id/feet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feet" />

            <RadioButton
                android:id="@+id/inch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inch" />

            <RadioButton
                android:id="@+id/cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm" />

            <RadioButton
                android:id="@+id/mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mm" />
        </RadioGroup>
    </TableRow>

</TableLayout>